<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.IniciadorAdminFragment"
    android:background="#0D0D0D">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="244dp"
        android:background="@drawable/fondo_cuervo"
        android:padding="10dp"
        android:text=" ElCuervo"
        android:textColor="#EA1D25"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmailData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="120dp"
        android:text="Email"
        android:textColor="#005096"
        android:textSize="20sp"
        android:textStyle="italic |bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@Usuario"
        android:textColor="#005096"
        android:textSize="20sp"
        android:textStyle="italic |bold"
        app:layout_constraintStart_toStartOf="@+id/txtEmailData"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailData" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:background="@drawable/fondo_prueba"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="201dp">

        <ImageButton
            android:id="@+id/btnAgregarViaje"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_botonera"
            android:contentDescription="@string/content_descp_agregar_viajes"
            android:src="@drawable/sumarviaje"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/btnAgregarViaje"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/btnAgregarViaje"
            app:layout_constraintTop_toBottomOf="@+id/btnAgregarViaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Agregar Viaje"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_prueba"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageButton
            android:id="@+id/btnVerPrecios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_botonera"
            android:contentDescription="@string/content_descp_ver_precios"
            android:src="@drawable/precios"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Ver Precios"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnVerPrecios"
            app:layout_constraintStart_toStartOf="@+id/btnVerPrecios"
            app:layout_constraintTop_toBottomOf="@+id/btnVerPrecios" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_prueba"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_botonera"
            android:contentDescription="@string/content_descp_nuestros_clientes"
            android:src="@drawable/market"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Nuestros Clientes"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton9"
            app:layout_constraintStart_toStartOf="@+id/imageButton9"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_prueba"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <ImageButton
            android:id="@+id/btnDesignarRuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_botonera"
            android:contentDescription="@string/content_descp_ayuda"
            android:src="@drawable/ayuda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Designar Ruta"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnDesignarRuta"
            app:layout_constraintStart_toStartOf="@+id/btnDesignarRuta"
            app:layout_constraintTop_toBottomOf="@+id/btnDesignarRuta" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fondo_prueba"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_botonera"
            android:contentDescription="@string/content_descp_cancelar_viaje"
            android:src="@drawable/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Cancelar Viaje"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="117dp"
        android:layout_height="98dp"
        android:src="@drawable/motocambio"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-smallcaps"
        android:text="Motoenvios"
        android:textColor="#352442"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/fondo_prueba"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/btnViajesCargados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_botonera"
            android:contentDescription="@string/content_descp_mis_envios"
            android:src="@drawable/misenvios"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Viajes Cargados"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnViajesCargados"
            app:layout_constraintStart_toStartOf="@+id/btnViajesCargados"
            app:layout_constraintTop_toBottomOf="@+id/btnViajesCargados" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:fontFamily="serif"
        android:text="Email :"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/txtEmailData"
        app:layout_constraintEnd_toStartOf="@+id/txtEmailData"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="serif"
        android:text="Usuario :"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/txtUserData"
        app:layout_constraintEnd_toStartOf="@+id/txtUserData"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>